@@ -218,13 +218,13 @@
 <tr class="row-even"><td><p><strong>C2H2O2_column_number_density</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
-<td></td>
+<td><p>[mol/m^2]</p></td>
 <td><p>vertical column of glyoxal</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>C2H2O2_column_number_density_uncertainty</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
-<td></td>
+<td><p>[mol/m^2]</p></td>
 <td><p>random error of vertical column density</p></td>
 </tr>
 <tr class="row-even"><td><p><strong>C2H2O2_column_number_density_validity</strong></p></td>
