@@ -1,3 +1,6 @@
+* Updates to product ingestions:
+  - S5P PAL L2 CHOCHO: fixed missing units for number density variables.
+
 1.20 2023-09-19
 ~~~~~~~~~~~~~~~
 
